# ebau-gwr

./: .dockerignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MAINENANCE.md  MAINTENANCE.md  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  manage.py  pyproject.toml  requirements-base.txt  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  uwsgi.ini
.github/: dependabot.yml
.github/workflows/: pypi.yml  tests.yml
ebau-gwr/: conftest.py  settings.py  urls.py  wsgi.py
ebau-gwr/core/: apps.py
ebau_gwr/: conftest.py  settings.py  urls.py
ebau_gwr/core/: apps.py  factories.py  formatters.py  hs_client.py  models.py  serializers.py  urls.py  views.py
ebau_gwr/core/schema/: ech_0007_6_0.py  ech_0008_3_0.py  ech_0010_6_0.py  ech_0044_4_1.py  ech_0058_5_0.py  ech_0097_2_0.py  ech_0129_5_0.py  ech_0216_2_0.py
ebau_gwr/core/tests/: ech_mock_data.py  test_ech.py  test_views.py
ebau_gwr/core/tests/mock_xml/: __init__.py  constructionProjectCompleteResponse.xml  getConstructionProjectResponse.xml
ebau_gwr/core/tests/snapshots/: snap_test_views.py
ebau_gwr/core/xsd/: ech_0097_2_0.xsd  ech_0216_2_0.xsd
ebau_gwr/linker/: models.py  views.py
ebau_gwr/linker/tests/snapshots/: snap_test_views.py
ebau_gwr/token_proxy/: apps.py
ebau_gwr/token_proxy/tests/: test_views.py
scripts/: build_ech0216_parser.py
templates/: CHANGELOG.md.j2
